--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             <div class="confetti-piece" style="left: 90%; animation-delay: 4s;"></div>
         </div>
         <div class="lightning"></div>
-        <h1 class="animated-text">¡Estás Invitado!</h1>
+        <h1 class="animated-text">¡Atención, tenemos un cambio!</h1>
         <div class="image-container">
             <img src="bluey.png" alt="Bluey" width="80%">
         </div>
